overflow_bug/fixed

--- a/app/sass/_head.sass
+++ b/app/sass/_head.sass
@@ -20,7 +20,7 @@ header
 	position: absolute
 	top: 17px
 	right: 0
-	z-index: 3000
+	z-index: 3001
 	color: $font_menu
 	+transition(all, 0.5s, ease-in-out)
 	&:hover,
